{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 33,
  "lineage": "fab85887-0fc7-9f0d-3a17-62badb2a46ee",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "priv-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052b9fbb6949f883a",
            "arn": "arn:aws:ec2:us-east-1:749576275580:instance/i-01c6fd854ebb656da",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c6fd854ebb656da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f5d2fdad4323960",
            "private_dns": "ip-10-0-1-181.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04c3502eebc43bc9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03f64494f9fadfc74"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c715bb2373224e06",
            "tags": {
              "Name": "private_ec2_0"
            },
            "tags_all": {
              "Name": "private_ec2_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f64494f9fadfc74"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ami_id",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052b9fbb6949f883a",
            "arn": "arn:aws:ec2:us-east-1:749576275580:instance/i-03c3f6c1e91a2fb76",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c3f6c1e91a2fb76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5faaa36705bdd11",
            "private_dns": "ip-10-0-3-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d08551c70c33aed2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03f64494f9fadfc74"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0854f5bf080bd594e",
            "tags": {
              "Name": "private_ec2_1"
            },
            "tags_all": {
              "Name": "private_ec2_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f64494f9fadfc74"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ami_id",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052b9fbb6949f883a",
            "arn": "arn:aws:ec2:us-east-1:749576275580:instance/i-09598e2c95c475251",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09598e2c95c475251",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c09ef5163476b0b1",
            "private_dns": "ip-10-0-0-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.241",
            "public_ip": "98.81.112.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8abaeae52693824",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03f64494f9fadfc74"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f994238228d5a058",
            "tags": {
              "Name": "public_ec2_0"
            },
            "tags_all": {
              "Name": "public_ec2_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f64494f9fadfc74"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ami_id",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052b9fbb6949f883a",
            "arn": "arn:aws:ec2:us-east-1:749576275580:instance/i-03adacf9ce0a6f432",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03adacf9ce0a6f432",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ca2e50d3cd075287",
            "private_dns": "ip-10-0-2-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.243",
            "public_ip": "3.80.198.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e56ae78f8615c84e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03f64494f9fadfc74"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cc2a8cbc6f98156",
            "tags": {
              "Name": "public_ec2_1"
            },
            "tags_all": {
              "Name": "public_ec2_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f64494f9fadfc74"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ami_id",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749576275580:security-group/sg-03f64494f9fadfc74",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f64494f9fadfc74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240928123302719300000003",
            "name_prefix": "terraform-",
            "owner_id": "749576275580",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg"
            },
            "tags_all": {
              "Name": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bab23bf2598fc087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:loadbalancer/app/sprints-load-balancer-0/d1b9111cb1c40bec",
            "arn_suffix": "app/sprints-load-balancer-0/d1b9111cb1c40bec",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sprints-load-balancer-0-835880355.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:749576275580:loadbalancer/app/sprints-load-balancer-0/d1b9111cb1c40bec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sprints-load-balancer-0",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03f64494f9fadfc74"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07cc2a8cbc6f98156"
              },
              {
                "subnet_id": "subnet-0f994238228d5a058"
              }
            ],
            "subnets": [
              "subnet-07cc2a8cbc6f98156",
              "subnet-0f994238228d5a058"
            ],
            "vpc_id": "vpc-0bab23bf2598fc087",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:loadbalancer/app/sprints-load-balancer-1/93c52a88a71d7978",
            "arn_suffix": "app/sprints-load-balancer-1/93c52a88a71d7978",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-sprints-load-balancer-1-1626102755.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:749576275580:loadbalancer/app/sprints-load-balancer-1/93c52a88a71d7978",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sprints-load-balancer-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03f64494f9fadfc74"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0854f5bf080bd594e"
              },
              {
                "subnet_id": "subnet-0c715bb2373224e06"
              }
            ],
            "subnets": [
              "subnet-0854f5bf080bd594e",
              "subnet-0c715bb2373224e06"
            ],
            "vpc_id": "vpc-0bab23bf2598fc087",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:listener/app/sprints-load-balancer-0/d1b9111cb1c40bec/3dd2b18134cb131a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302710200000002/a5d2cef1869ab75a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:749576275580:listener/app/sprints-load-balancer-0/d1b9111cb1c40bec/3dd2b18134cb131a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:loadbalancer/app/sprints-load-balancer-0/d1b9111cb1c40bec",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:listener/app/sprints-load-balancer-1/93c52a88a71d7978/b164c07a60b59ba1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302703300000001/97e7887745556cd9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:749576275580:listener/app/sprints-load-balancer-1/93c52a88a71d7978/b164c07a60b59ba1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:loadbalancer/app/sprints-load-balancer-1/93c52a88a71d7978",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302710200000002/a5d2cef1869ab75a",
            "arn_suffix": "targetgroup/tf-20240928123302710200000002/a5d2cef1869ab75a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302710200000002/a5d2cef1869ab75a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240928123302710200000002",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bab23bf2598fc087"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302703300000001/97e7887745556cd9",
            "arn_suffix": "targetgroup/tf-20240928123302703300000001/97e7887745556cd9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302703300000001/97e7887745556cd9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240928123302703300000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bab23bf2598fc087"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private-target-group-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302703300000001/97e7887745556cd9-20240928123324700800000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302703300000001/97e7887745556cd9",
            "target_id": "i-01c6fd854ebb656da"
          },
          "dependencies": [
            "module.ec2.aws_instance.priv-ec2",
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ami_id",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302703300000001/97e7887745556cd9-20240928123324649600000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302703300000001/97e7887745556cd9",
            "target_id": "i-03c3f6c1e91a2fb76"
          },
          "dependencies": [
            "module.ec2.aws_instance.priv-ec2",
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ami_id",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public-target-group-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302710200000002/a5d2cef1869ab75a-2024092812364217240000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302710200000002/a5d2cef1869ab75a",
            "target_id": "i-09598e2c95c475251"
          },
          "dependencies": [
            "module.ec2.aws_instance.pub-ec2",
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ami_id",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302710200000002/a5d2cef1869ab75a-2024092812364211730000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:749576275580:targetgroup/tf-20240928123302710200000002/a5d2cef1869ab75a",
            "target_id": "i-03adacf9ce0a6f432"
          },
          "dependencies": [
            "module.ec2.aws_instance.pub-ec2",
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ami_id",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749576275580:route-table/rtb-09478598223993504",
            "id": "rtb-09478598223993504",
            "owner_id": "749576275580",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03895fef90ccf0a12",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bab23bf2598fc087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749576275580:route-table/rtb-052d2c928a0597066",
            "id": "rtb-052d2c928a0597066",
            "owner_id": "749576275580",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc6a24aa9667399c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bab23bf2598fc087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1a2a2471ca4ce9b",
            "route_table_id": "rtb-09478598223993504",
            "subnet_id": "subnet-0c715bb2373224e06"
          },
          "dependencies": [
            "module.subnet.aws_route_table.private-rt",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003ec6c8c4af936a7",
            "route_table_id": "rtb-09478598223993504",
            "subnet_id": "subnet-0854f5bf080bd594e"
          },
          "dependencies": [
            "module.subnet.aws_route_table.private-rt",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055fdb669b40d8792",
            "route_table_id": "rtb-052d2c928a0597066",
            "subnet_id": "subnet-0f994238228d5a058"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public-rt",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0185722f4ad468827",
            "route_table_id": "rtb-052d2c928a0597066",
            "subnet_id": "subnet-07cc2a8cbc6f98156"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public-rt",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749576275580:subnet/subnet-0c715bb2373224e06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c715bb2373224e06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "749576275580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sprints_private_subnet_0"
            },
            "tags_all": {
              "Name": "sprints_private_subnet_0"
            },
            "vpc_id": "vpc-0bab23bf2598fc087"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749576275580:subnet/subnet-0854f5bf080bd594e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0854f5bf080bd594e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "749576275580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sprints_private_subnet_1"
            },
            "tags_all": {
              "Name": "sprints_private_subnet_1"
            },
            "vpc_id": "vpc-0bab23bf2598fc087"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749576275580:subnet/subnet-0f994238228d5a058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f994238228d5a058",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "749576275580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sprints_public_subnet_0"
            },
            "tags_all": {
              "Name": "sprints_public_subnet_0"
            },
            "vpc_id": "vpc-0bab23bf2598fc087"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749576275580:subnet/subnet-07cc2a8cbc6f98156",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cc2a8cbc6f98156",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "749576275580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sprints_public_subnet_1"
            },
            "tags_all": {
              "Name": "sprints_public_subnet_1"
            },
            "vpc_id": "vpc-0bab23bf2598fc087"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d289702f66e3adb",
            "arn": "arn:aws:ec2:us-east-1:749576275580:elastic-ip/eipalloc-06d289702f66e3adb",
            "domain": "vpc",
            "id": "eipalloc-06d289702f66e3adb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-29-165-197.compute-1.amazonaws.com",
            "public_ip": "100.29.165.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749576275580:internet-gateway/igw-0bc6a24aa9667399c",
            "id": "igw-0bc6a24aa9667399c",
            "owner_id": "749576275580",
            "tags": {
              "Name": "sprints-IGW"
            },
            "tags_all": {
              "Name": "sprints-IGW"
            },
            "vpc_id": "vpc-0bab23bf2598fc087"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d289702f66e3adb",
            "association_id": "eipassoc-052596582b2b2c8e3",
            "connectivity_type": "public",
            "id": "nat-03895fef90ccf0a12",
            "network_interface_id": "eni-01c8fb89d47fc4dae",
            "private_ip": "10.0.0.216",
            "public_ip": "100.29.165.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f994238228d5a058",
            "tags": {
              "Name": "sprints-NAT"
            },
            "tags_all": {
              "Name": "sprints-NAT"
            }
          },
          "dependencies": [
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749576275580:vpc/vpc-0bab23bf2598fc087",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eaabc40bd24b04cf",
            "default_route_table_id": "rtb-0338a824cd9570289",
            "default_security_group_id": "sg-066a6534bde9b7ce5",
            "dhcp_options_id": "dopt-0816389f00c2bfa74",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bab23bf2598fc087",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0338a824cd9570289",
            "owner_id": "749576275580",
            "tags": {
              "Name": "sprints-VPC"
            },
            "tags_all": {
              "Name": "sprints-VPC"
            }
          }
        }
      ]
    }
  ]
}